objects/SCP_Certa_GC__Region__c.object
<CustomObject>
    <description>Region where to work.</description>
    <fields>
        <fullName>SCP_Certa_GC__Currency_Name__c</fullName>
        <label>Currency Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Currency__c</fullName>
        <label>Currency</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>SCP_Certa_GC__Region__c</referenceTo>
        <relationshipName>Child</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Geographical Region</label>
    <listViews>
        <fullName>SCP_Certa_GC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de GAP Region</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geographical Regions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>